--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "next": "14.2.15",
     "nodemailer": "^6.9.16",
     "react": "^18",
-    "react-dom": "^18"
+    "react-animated-cursor": "^2.11.2",
+    "react-dom": "^18",
+    "react-icons": "^5.4.0",
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "@types/node": "^20",
